--- a/app/globals.css
+++ b/app/globals.css
@@ -1,47 +1,18 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+
 :root {
+  
+  font-family: 'Book antique regular' !important;
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: 'Book antique';
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -70,7 +41,6 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
-  }
 }
 
 * {
@@ -83,25 +53,347 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-M);
+  /* font-family: 'Book antique' !important; */
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* font-family: 'Book antique' !important; */
+  color: #fff;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    ; */
+
+    background: #0E1803;
 }
 
+h1 {
+  font-size: 60px;
+  color: #fff;
+  opacity: 100%;
+  font-family: var(--font-B);
+}
+h2 {
+  font-size: 50px;
+  color: #fff;
+  opacity: 80%;
+  font-family: var(--font-B);
+}
+h5 {
+  font-size: 38px;
+  color: #00FF01;
+  opacity: 100%;
+  font-family: var(--font-B);
+}
+h6 {
+  font-size: 30px;
+  color: #FFF;
+  opacity: 100%;
+  font-family: var(--font-M);
+}
 a {
   color: inherit;
   text-decoration: none;
+  font-family: var(--font-M);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+p{
+  font-family: var(--font-M);
+}
+
+.navbar{
+  background: #000;
+  box-shadow: none;
+  align-items: center;
+  position: fixed;
+}
+
+.wallet-adapter-button {
+  margin-top: 20px;
+  font-size: 22px;
+}
+
+.top-wallet-section {
+  display: flex;
+  margin-left: 40px;
+}
+.top-wallet-section button {
+  color: white !important;
+  background: radial-gradient(122.09% 122.09% at 50% 50%, rgba(0, 255, 1, 0) 0%, #00FF01 100%) !important;
+  border-radius: 100px !important;
+  border-color: #00FF01 !important;
+}
+
+.top-wallet-section button:hover {
+  border-color: #FFF !important;
+}
+
+.top-wallet-section div {
+  color: #fff;
+  font-size: 20px;
+  background: radial-gradient(122.09% 122.09% at 50% 50%, rgba(0, 255, 1, 0) 0%, #00FF01 100%) !important;
+  border-radius: 100px !important;
+  border-color: #00FF01 !important;
+}
+
+.fetch-block-data {
+  width: 40%;
+  margin-left: 30%;
+  display: flex;
+}
+
+.fetch-block-data button {
+  margin-top: 100px;
+  color: white !important;
+  background: radial-gradient(122.09% 122.09% at 50% 50%, rgba(0, 255, 1, 0) 0%, #00FF01 100%) !important;
+  border-radius: 100px !important;
+  border-color: #00FF01 !important;
+  text-align: center;
+}
+ 
+.company-main-content {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.company-enterprise-button {
+  box-sizing: border-box !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-start !important;
+  padding: 10px 24px !important;
+  border: 1px solid #00FF01 !important;
+  border-radius: 100px !important;
+  color: #FDFDFD !important;
+
+}
+
+.company-user-button {
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 24px;
+
+  border: 1px solid #00FF01;
+  border-radius: 100px;
+  color: #FDFDFD;
+
+}
+
+.sm-green-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9.03671px 27.1101px;
+  gap: 7.53px;
+  position: absolute;
+  width: 177.22px;
+  height: 47.07px;
+  background: #32D94B;
+  border-radius: 70.7876px;
+  border: 1px solid #32D94B;
+}
+.sm-green-btn:hover{
+  background: transparent;
+}
+.navbar-green-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9.03671px 27.1101px;
+  gap: 7.53px;
+  width: 177.22px;
+  height: 47.07px;
+  background: #32D94B;
+  border-radius: 70.7876px;
+  border: 1px solid #32D94B;
+}
+.landing-tab{
+  background: rgba(101, 226, 101, 0.3);
+  border-radius: 50px;
+  padding: 15px 20px;
+}
+.single-tab{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 25px;
+  width: 282px;
+  height: 47px;
+  background: #050A04;
+  border-radius: 81px;
+  word-wrap: normal;
+  font-family: 'Proxima Nova' !important;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  text-decoration: none !important;
+
+  color: #FFFFFF;
+}
+.landing-tab .MuiTabs-scroller.MuiTabs-fixed.css-jpln7h-MuiTabs-scroller{
+  margin: 0px !important;
+  text-decoration: none !important;
+}
+.landing-tab .MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer{
+  justify-content: space-around;
+  text-decoration: none !important;
+}
+.landing-tab .MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer button{
+  width: 260px;
+  font-size: 16px;
+  background: transparent;
+  text-decoration: none !important;
+  
+}
+.landing-tab .css-r9ef6q-MuiButtonBase-root-MuiTab-root.Mui-selected{
+  color: #fff;
+  background: #050A04;
+}
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorPrimary.Mui-selected.single-tab.css-r9ef6q-MuiButtonBase-root-MuiTab-root{
+  color: #fff;
+  background: #050A04;
+}
+.landing-tab .MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer button:hover{
+  color: #fff;
+  background: #050A04 !important;
+  text-decoration: none !important;
+}
+.landing-tab .css-gen84r-MuiTabs-indicator{
+  display: none;
+}
+.section-link{
+  color: #54CD0A;
+  text-decoration: underline;
+  font-size: 24px;
+  font-weight: 500;
+}
+.section-link:hover{
+  color: #fff;
+}
+.small-tittel{
+  font-size: 28px !important;
+  color: #fff;
+}
+.grid-card{
+  width: fit-content;
+  background: #000000;
+  border-radius: 27.3085px;
+}
+.community-text{
+  display: flex;
+  align-items: center;
+  margin-left: 104px;
+  margin-top: 48px;
+}
+.community-down{
+  justify-content: end;
+}
+.timer-section{
+  display: flex;
+  align-items: center;
+}
+.timer-wrap{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.timer{
+  width: 111px;
+  height: 123px;
+  background: rgba(14, 25, 3, 0.62);
+  border-radius: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+}
+.community-bg{
+  background: url(/images/Discordicon.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+.timer-bg{
+  background: url(/images/Discordicon.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+.modalContainer-1 {
+    
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-2 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-3 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-4 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-5 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark tone background color */
+  backdrop-filter: blur(5px); /* Background blur effect */
+  z-index: 50; /* Ensure the overlay appears above other elements */
 }
