--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,229 +1,465 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+.navbar-link button:hover{
+  color:#00FF01 !important;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.head-text {
+  font-size: 50px !important;
+  font-weight: 400 !important;
+  line-height: 1.34 !important;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.sub-text  {
+  font-size: 30px !important;
+  font-weight: 400 !important;
+  line-height: 1 !important;
+  text-align: center;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.test {
+  font-size: 30px;
+  line-height: 1;
+  text-align: center;
 }
 
 @media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+  html {
+    color-scheme: dark;
+}
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
+.toggle-box{
+  margin-bottom: 2px;
+  margin-top: 10px;
+  font-size: 32px;
+  color: #fff;
+}
+.toggle-item{
+  margin-bottom: 5px;
+  padding: 20px 50px
+}
+.toggle-item:hover{
+  color:#00FF01
+}
+.image-container{
+  margin: 0;
+}
+.image{
+  position: relative;
+  left: -100%;
+  animation: slideRight 1s forwards;
+}
+
+.logo-icon{
+  margin-top: 19px;
+  margin-right: -16px;
+}
+
+@keyframes slideRight {
   to {
-    transform: rotate(0deg);
+    left: 0;
+}
+}
+.button-arrow{
+  background-color: transparent !important;
+  border-radius: 20px !important;
+  border: 2px solid #fff !important;
+  font-size: large !important;
+  font-weight: 400 !important;
+}
+.button-arrow:hover{
+  border-color: #00FF01 !important;
+  background-color: #cfcece !important;
+  color: #000 !important;
+  font-weight: 600 !important;
+  width:165px
+}
+.line{
+  border-top: 0.5px solid #00FF01 !important;
+  margin-top: 50px;
+  opacity: 0.35;
+}
+.line-end{
+  border-top: 0.5px solid #fff;
+  margin-top: 50px;
+  opacity: 0.6;
+}
+.circle{
+  border-radius: 50%;
+  border: 0.6px solid #0afd0a;
+  width: 150px;
+  height: 150px;
+  padding: 6px;
+  margin-left: 80px;
+  margin-top: 5px;
+  background: transparent;
+  position: relative;
+  transition: all 0.5s ease;
+}
+.dotted-circle{
+  border-radius: 50%;
+  border: 2px dashed #00FF01;
+  width: 120px;
+  height: 120px;
+  padding: 6px;
+  background: transparent;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.faded-circle{
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: radial-gradient( rgba(173, 173, 173, 0.812), #040404);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 2s ease;
+}
+.circle:hover{
+  transform: rotate(360deg);
+  border: 8px solid #00fb00a9;
+  width: 155px;
+  height: 155px;
+}
+.circle:hover .faded-circle{
+  width: 80px;
+  height: 80px;
+}
+.grid-img:hover img{
+  transform:  scale(1.2);
+}
+.community-left{
+  position: relative;
+  left: -100%;
+  animation: slideRight 1s forwards;
+}
+.community-right{
+  position: relative;
+  right: -100%;
+  animation: slideLeft 1s forwards;
+}
+@keyframes slideLeft {
+  to {
+    right: 0;
+}
+}
+.box-color{
+  background: radial-gradient( rgba(0, 255, 0, 0.276), #040404);
+  box-shadow: 0 0 0 1px rgb(0, 255, 1);
+}
+.icon-circle{
+  padding: 6px;
+  margin-left: 65px;
+  margin-top: 5px;
+  position: relative;
+}
+.social-button{
+  background-color: transparent !important;
+  border-radius: 20px !important;
+  border: 1px solid #00FF01 !important;
+  color: #ffff !important;
+}
+.social-button:hover{
+  background: radial-gradient( rgba(0, 255, 0, 0.529), #040404);
+}
+@media screen and (max-width:540px) {
+.grid-img{
+    margin-left: -80px;
+}
+.grid-h1{
+    font-size: 40px !important;
+}
+.image{
+    width:400px;
+}
+.community-left, .community-right{
+    width:100%
+}
+.navbarContainer {
+    display: flex;
+    flex-direction: column;
+}
+}
+
+.grid-part{
+  margin-left: 0px !important;
+  padding-left: 0px !important;
+}
+
+@media screen and (max-width:850px) {
+  .icon-circle{
+      display: none;
+      font-size: 16px !important;
+  }
+  .discord{
+      margin-left: 20px;
+  }
+  .twitter{
+      margin-right: 20px;
   }
 }
+@media screen and (min-width:1000px){
+.reward-heading{
+  margin-top: 250px;
+}
+.grid-right{
+  margin-right: -80px;
+}
+}
+
+@media screen and (max-width:300px){
+  .price-box{
+      width:180px !important;
+      height:360px !important; 
+  }
+}
+
+@media screen and (max-width:600px){
+  .discord{
+      margin-left: 15px;
+  }
+}
+
+@media screen and (min-width:912px){
+  .image-container{
+      margin-left: -38px;
+  }
+  .reward-heading{
+      margin-top: 180px !important;
+  }
+}
+
+@media screen and (max-width:980px ) {
+  .icon-circle{
+      width:80px;
+      height: 100px;
+      margin-left: -10px;
+  }
+}
+
+.team-name{
+  font-size: 30px;
+  font-family: 'Book antique';
+  color: #00FF01;
+  margin-left: 30px;
+  margin-top:3px;             
+}
+
+.team-info{
+  font-size: 25px;
+  font-family: 'Book antique';
+  margin-bottom: 10px;
+  margin-left: 30px;
+}
+
+.wallet-adapter-button {
+  margin-top: 20px;
+  font-size: 22px;
+}
+
+/* .logo-image {
+  width: 58px;
+  height: 60px;
+} */
+
+.company-welcome-text {
+  font-family: 'Book Antiqua';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 51px;
+  text-align: center;
+  color: #FDFDFD;
+}
+
+.company-main-content {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+:global.company-enterprise-button {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 24px;
+  border: 1px solid #00FF01;
+  border-radius: 100px;
+  color: #FDFDFD;
+
+}
+
+.company-user-button {
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 24px;
+
+  border: 1px solid #00FF01;
+  border-radius: 100px;
+  color: #FDFDFD;
+
+}
+
+.price-box-landing{
+  width:255px;
+  height:400px; 
+  border:2px outset #d9d9d9;
+  border-radius: 10%;
+  box-shadow: 5px 5px #c1c1c1;
+  align-items: center;
+  margin-bottom: 12px;
+  text-align: center;
+  position: relative;
+}
+
+.price-box{
+  width:150px;
+  border:2px outset #d9d9d9;
+  border-radius: 10%;
+  box-shadow: 5px 5px #c1c1c1;
+  align-items: center;
+  margin-bottom: 12px;
+  text-align: center;
+  position: relative;
+}
+.price-box1{
+right: -100%;
+animation: slideLeft 1s forwards;
+}
+.price-box2{
+  right: -100%;
+  animation: slideLeft 3s forwards;
+}
+.price-box3{
+  left: -50%;
+  animation: slideRight 2s forwards;
+}
+.price-box4{
+  left: -50%;
+  animation: slideRight 4s forwards;
+}
+
+.nft-price{
+  margin-top: 20px;
+}
+
+@keyframes circle-animation {
+  0%
+{
+  box-shadow: 0px 0px 47.4427px 9.03671px #32D94B, inset -7.03775px 17.8014px 19.8713px #000000, inset 9.52167px -9.52167px 52.9902px -7.45174px rgba(223, 223, 223, 0.28);
+}
+
+22.502%,
+100% {
+  /* box-shadow: 0px 0px 47.4427px 9.03671px #32D94B, inset -7.03775px 17.8014px 19.8713px #000000, inset 9.52167px -9.52167px 52.9902px -7.45174px rgba(223, 223, 223, 0.28); */
+  box-shadow: none;
+}
+
+
+}
+
+.circle-animation {
+
+  animation: circle-animation 10s infinite;
+  
+}
+
+
+
+
+
+.circle-animation:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.circle-animation:nth-child(2) {
+  animation-delay: 2s;
+}
+
+.circle-animation:nth-child(3) {
+  animation-delay: 4s;
+}
+.circle-animation:nth-child(4) {
+  animation-delay: 6s;
+}
+
+.circle-animation:nth-child(5) {
+  animation-delay: 8s;
+}
+
+.modalContainer-1 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-2 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-3 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-4 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.modalContainer-5 {
+  
+  background-color: rgba(55, 160, 51, 0.31);; /* Dark tone background color */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  z-index: 100; 
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13.094px;
+  padding-right: 5px;/* Ensure the modal appears above other elements */
+  /* Additional styles for the modal */
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark tone background color */
+  backdrop-filter: blur(5px); /* Background blur effect */
+  z-index: 50; /* Ensure the overlay appears above other elements */
+}
+
+
+
