--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@ body {
     rgb(var(--background-start-rgb));
     ; */
 
-    background: #0E1803;
+    background: #0E1803 !important;
 }
 
 h1 {
@@ -106,7 +106,7 @@ p{
 }
 
 .navbar{
-  background: #000;
+  background: #000 !important;
   box-shadow: none;
   align-items: center;
   position: fixed;
@@ -197,9 +197,9 @@ p{
   position: absolute;
   width: 177.22px;
   height: 47.07px;
-  background: #32D94B;
+  background: #32D94B !important;
   border-radius: 70.7876px;
-  border: 1px solid #32D94B;
+  border: 1px solid #32D94B !important;
 }
 .sm-green-btn:hover{
   background: transparent;
@@ -213,35 +213,35 @@ p{
   gap: 7.53px;
   width: 177.22px;
   height: 47.07px;
-  background: #32D94B;
+  background: #32D94B !important;
   border-radius: 70.7876px;
-  border: 1px solid #32D94B;
+  border: 1px solid #32D94B !important;
 }
 .landing-tab{
-  background: rgba(101, 226, 101, 0.3);
-  border-radius: 50px;
-  padding: 15px 20px;
+  background: rgba(101, 226, 101, 0.3) !important;
+  border-radius: 50px !important;
+  padding: 15px 20px !important;
 }
 .single-tab{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: center !important;
   align-items: center;
-  padding: 9px 25px;
-  width: 282px;
-  height: 47px;
-  background: #050A04;
-  border-radius: 81px;
-  word-wrap: normal;
+  padding: 9px 25px !important;
+  width: 282px !important;
+  height: 47px !important;
+  background: #050A04 !important;
+  border-radius: 81px !important;
+  word-wrap: normal !important;
   font-family: 'Proxima Nova' !important;
   font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  text-align: center;
+  font-weight: 600 !important;
+  font-size: 24px !important;
+  line-height: 29px !important;
+  text-align: center !important;
   text-decoration: none !important;
 
-  color: #FFFFFF;
+  color: #FFFFFF !important;
 }
 .landing-tab .MuiTabs-scroller.MuiTabs-fixed.css-jpln7h-MuiTabs-scroller{
   margin: 0px !important;
@@ -263,11 +263,11 @@ p{
   background: #050A04;
 }
 .MuiButtonBase-root.MuiTab-root.MuiTab-textColorPrimary.Mui-selected.single-tab.css-r9ef6q-MuiButtonBase-root-MuiTab-root{
-  color: #fff;
-  background: #050A04;
+  color: #fff !important;
+  background: #050A04 !important;
 }
 .landing-tab .MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer button:hover{
-  color: #fff;
+  color: #fff !important;
   background: #050A04 !important;
   text-decoration: none !important;
 }
