--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,1,300&display=swap');
 
 
 :root {
@@ -53,7 +54,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: var(--font-M);
+  font-family: var(--font-mono);
   /* font-family: 'Book antique' !important; */
 }
 
